--- a/notes/0.2.markdown
+++ b/notes/0.2.markdown
@@ -1,1 +1,4 @@
 * Updated to build with Scala 2.8.0.RC1
+* Removed dependency on [scalaj-collection][].
+
+[scalaj-collection]: http://github.com/scalaj/scalaj-collection
