--- a/notes/0.3.markdown
+++ b/notes/0.3.markdown
@@ -1,6 +1,6 @@
 * Updated to version 0.6.1 of [Grizzled Scala][].
 * Added support for [automatic aggregate creation][], via the new
-  `StringTemplate.setAggregate()` method.
+  `StringTemplate.setAggregate()` methods.
 * Changed `StringTemplate` interface to support `Any`, not just `AnyRef`
   attribute values.
 
