--- a/notes/0.4.1.markdown
+++ b/notes/0.4.1.markdown
@@ -1,1 +1,3 @@
-* Updated to build with Scala 2.8.0.RC7. Now builds against RC3, RC5 and RC7.
+* Updated to build with Scala 2.8.0.final *only*. Dropped support for
+  Scala 2.8.0 release candidates (RCs).
+
