--- a/notes/0.4.2.markdown
+++ b/notes/0.4.2.markdown
@@ -1,3 +1,5 @@
+* Moved `isOfType` method to [Grizzled Scala][] library.
 * Updated to released 1.2 version of [ScalaTest][].
 
 [ScalaTest]: http://scalatest.org/
+[Grizzled Scala]: http://bmc.github.com/grizzled-scala/
