--- a/notes/0.5.1.markdown
+++ b/notes/0.5.1.markdown
@@ -1,5 +1,5 @@
-* Now compiles against [Scala][] 2.8.1 RC1, as well as 2.8.0 and 2.7.7.
-* Updated to version 0.3.1 of the [ClassUtil][] library, to pick up a fix
+* Now compiles against [Scala][] 2.8.1, as well as 2.8.0
+* Updated to version 0.3.2 of the [ClassUtil][] library, to pick up a fix
   to [ClassUtil Issue #1][] (The ClassUtil `MapToBean` method can generate
   class names that conflict with previously generated class names.)
 
