--- a/notes/0.4.markdown
+++ b/notes/0.4.markdown
@@ -4,6 +4,6 @@
   [ClassUtil][] library's [MapToBean][] capability. This change introduces
   a dependency on [ClassUtil][].
 
-[ClassUtil]: http://bmc.github.com/classutil/
-[MapToBean]: http://bmc.github.com/classutil/#generating_java_beans_from_scala_maps
+[ClassUtil]: http://software.clapper.org/classutil/
+[MapToBean]: http://software.clapper.org/classutil/#generating_java_beans_from_scala_maps
 [mapped aggregates]: http://darkroom/~bmc/mystuff/scala/scalasti/gh-pages/_site/#mapped_aggregates
