--- a/notes/0.3.markdown
+++ b/notes/0.3.markdown
@@ -6,5 +6,5 @@
 * Updated to version 0.7 of [Grizzled Scala][].
 * Now compiles with Scala 2.8.0.RC3, as well as RC2. Dropped support for RC1.
 
-[Grizzled Scala]: http://bmc.github.com/grizzled-scala/
+[Grizzled Scala]: http://software.clapper.org/grizzled-scala/
 [automatic aggregate creation]: http://www.antlr.org/wiki/display/ST/Expressions#Expressions-Automaticaggregatecreation
