--- a/notes/0.5.markdown
+++ b/notes/0.5.markdown
@@ -10,6 +10,6 @@
 
 [Issue #1]: http://github.com/bmc/scalasti/issues#issue/1
 [ScalaTest]: http://scalatest.org/
-[ClassUtil]: http://bmc.github.com/classutil/
+[ClassUtil]: http://software.clapper.org/classutil/
 [Scala Tools Maven repository]: http://www.scala-tools.org/repo-releases/
 [SBT]: http://code.google.com/p/simple-build-tool/
