update sbt-plugins version

--- a/notes/0.5.2.markdown
+++ b/notes/0.5.2.markdown
@@ -1,3 +1,5 @@
 * Updated to latest release of [ClassUtil][] library.
+* Updated to latest release of [sbt-plugins][] library.
 
 [ClassUtil]: http://software.clapper.org/classutil/
+[ClassUtil]: http://software.clapper.org/sbt-plugins/
