--- a/notes/0.5.5.markdown
+++ b/notes/0.5.5.markdown
@@ -1,1 +1,5 @@
+* Now builds for [Scala][] 2.9.1, as well as 2.9.0-1, 2.9.0, 2.8.1, and 2.8.0.
 * Converted code to conform with standard Scala coding style.
+* Fixed some minor Scaladoc issues.
+
+[Scala]: http://www.scala-lang.org/
